Fix subtitle readability

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -13,6 +13,10 @@ body {
     /*background-color: rgb(200, 200, 200);*/
 }
 
+.header h3 {
+    text-shadow: 0px 0px 5px white;
+}
+
 @media (min-width: 1200px) {
     .container{
         max-width: 970px;
